--- a/main.html
+++ b/main.html
@@ -4,10 +4,80 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+        /* Optional CSS styling for the table */
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            border: 1px solid black;
+        }
+        th, td {
+            border: 1px solid black;
+          
+            text-align: left;
+			
+        }
+		td{
+			 text-align: right;
+		}
+/*         th {
+            background-color: #915853;
+        } */
+    </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+        <thead >
+            <tr class="red">
+                <th>Part</th>
+                <th>XS</th>
+                <th>S</th>
+				 <th>M</th>
+				 <th>L</th>
+				 <th>XL</th>
+            </tr>
+        </thead>
+        <tbody >
+            <tr class="row2">
+                <td style="text-align: left">Waist</td>
+                <td>25</td>
+                <td>28</td>
+				 <td>30</td>
+				 <td>31</td>
+				 <td>32</td>
+				
+            </tr>
+            <tr class="row3">
+                <td style="text-align: left">Chest</td>
+                <td>34</td>
+                <td>34</td>
+				 <td>38</td>
+				 <td>40</td>
+				 <td>41</td>
+			
+            </tr>
+			<tr class="row4">
+                <td style="text-align: left">Sleeve</td>
+                <td>23</td>
+                <td>24</td>
+				 <td>24</td>
+				 <td>25</td>
+				 <td>25</td>
+			
+            </tr>
+            <!-- Add more rows as needed -->
+        </tbody>
+    </table>
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
